# crew_ai_gents_project

./: .gitignore  README.md  TODO  main.py  main2.py  pyproject.toml  setup.sh  testPr.java
src/metricsCrew/: .gitignore  crew.py  main.py
src/metricsCrew/agents/: agent_manager.py  business_agent.py  code_agent.py  error_agent.py  manager_agent.py  performance_agent.py  query_agent.py  resource_agent.py  result_agent.py  schema_agent.py
src/metricsCrew/config/: __init__.py  agents.yaml  data_sources.yaml  tasks.yaml  tools.yaml
src/metricsCrew/core/: config.py  crew_manager.py  data_manager.py  schema_registry.py
src/metricsCrew/tasks/: task_definitions.py
src/metricsCrew/tools/: result_tool.py  schema_tool.py
