[project]
name = "jobsearch"
version = "0.1.0"
description = "JobSearch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
jobsearch = "jobsearch.main:run"
run_crew = "jobsearch.main:run"
train = "jobsearch.main:train"
replay = "jobsearch.main:replay"
test = "jobsearch.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
